cluster/webtrees-test/deployment-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webtrees-test-mysql-deployment
  namespace: webtrees-test
spec:
  replicas: 1
  serviceName: webtrees-test-mysql
  selector:
    matchLabels:
      app: webtrees-test-mysql
  template:
    metadata:
      labels:
        app: webtrees-test-mysql
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: MARIADB_RANDOM_ROOT_PASSWORD
              value: "1"
            - name: MARIADB_USER
              value: webtrees
            - name: MARIADB_DATABASE
              value: webtrees
          image: cr.nathanv.app/docker.io/library/mariadb:12.3.3
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: webtrees-test-pvc-mysql
