cluster/webtrees-test/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtrees-test-mysql-service
  namespace: webtrees-test
spec:
  type: ClusterIP
  selector:
    app: webtrees-test-mysql
  ports:
    - port: 3306
      protocol: TCP
