cluster/webtrees-test/service-webtrees.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtrees-test-service
  namespace: webtrees-test
spec:
  type: ClusterIP
  selector:
    app: webtrees-test
  ports:
    - port: 80
      protocol: TCP
