cluster/webtrees-test/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webtrees-route
  namespace: webtrees-test
  annotations:
    k8s-dns.nathanv.me/hostname: webtrees-test.nathanv.app
    k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webtrees-test.nathanv.app`)
      kind: Rule
      services:
        - name: webtrees-service
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
